--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clsx": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-heroicons": "0.0.7",
     "react-scripts": "3.4.1"
   },
   "scripts": {
